--- a/app/jira.yml
+++ b/app/jira.yml
@@ -3,20 +3,19 @@ settings:
   artifacts-dir: results/jira/%Y-%m-%d_%H-%M-%S
   aggregator: consolidator
   verbose: false
-  check-updates: false    # disable bzt check for updates
   env:
-    application_hostname: test_jira_instance.atlassian.com    # Jira DC hostname without protocol and port e.g. test-jira.atlassian.com or localhost
-    application_protocol: http      # http or https
-    application_port: 80            # 80, 443, 8080, 2990, etc
+    application_hostname: jiracluster.dc.zdevbox.net    # Jira DC hostname without protocol and port e.g. test-jira.atlassian.com or localhost
+    application_protocol: https      # http or https
+    application_port: 443            # 80, 443, 8080, 2990, etc
     secure: True                    # Set False to allow insecure connections, e.g. when using self-signed SSL certificate
     application_postfix:            # e.g. /jira in case of url like http://localhost:2990/jira
-    admin_login: admin
-    admin_password: admin
-    load_executor: jmeter           # jmeter and locust are supported. jmeter by default.
-    concurrency: 200                # number of concurrent virtual users for jmeter or locust scenario
-    test_duration: 45m
-    ramp-up: 3m                     # time to spin all concurrent users
-    total_actions_per_hour: 54500   # number of total JMeter/Locust actions per hour
+    admin_login: selenium
+    admin_password: zscripts1
+    load_executor: locust            # jmeter and locust are supported. jmeter by default.
+    concurrency: 2                # number of concurrent virtual users for jmeter or locust scenario
+    test_duration: 5m
+    ramp-up: 3s                     # time to spin all concurrent users
+    total_actions_per_hour: 5450   # number of total JMeter/Locust actions per hour
     WEBDRIVER_VISIBLE: False
     JMETER_VERSION: 5.4.2
     LANGUAGE: en_US.utf8
@@ -34,9 +33,9 @@ settings:
     view_kanban_board: 7
     view_backlog: 6
     browse_boards: 1
-    standalone_extension: 0 # By default disabled
+    standalone_extension: 2 # By default disabled
     # Custom dataset section.
-    custom_dataset_query:          # Write JQL query to add JQL output to the app/datasets/jira/custom-issues.csv, e.g. "summary ~ 'AppIssue*'"
+    custom_dataset_query: "summary ~ 'zcissue*'"        # Write JQL query to add JQL output to the app/datasets/jira/custom-issues.csv, e.g. "summary ~ 'AppIssue*'"
 services:
   - module: shellexec
     prepare:
@@ -51,7 +50,7 @@ services:
       - python util/post_run/cleanup_results_dir.py
   - module: pip-install
     packages:
-      - selenium==4.1.3
+      - selenium==3.141.0
 execution:
   - scenario: ${load_executor}
     executor: ${load_executor}
@@ -118,7 +117,7 @@ modules:
       httpsampler.ignore_failed_embedded_resources: "true"
   selenium:
     chromedriver:
-      version: "101.0.4951.41" # Supports Chrome version 101. You can refer to http://chromedriver.chromium.org/downloads
+      version: "99.0.4844.51" # Supports Chrome version 97. You can refer to http://chromedriver.chromium.org/downloads
 reporting:
 - data-source: sample-labels
   module: junit-xml
