--- a/app/jira.yml
+++ b/app/jira.yml
@@ -5,13 +5,13 @@ settings:
   verbose: false
   check-updates: false    # disable bzt check for updates
   env:
-    application_hostname: jiracluster.dc.zdevbox.net    # Jira DC hostname without protocol and port e.g. test-jira.atlassian.com or localhost
+    application_hostname: test_jira_instance.atlassian.com    # Jira DC hostname without protocol and port e.g. test-jira.atlassian.com or localhost
     application_protocol: https      # http or https
     application_port: 443            # 80, 443, 8080, 2990, etc
     secure: True                    # Set False to allow insecure connections, e.g. when using self-signed SSL certificate
     application_postfix:            # e.g. /jira in case of url like http://localhost:2990/jira
-    admin_login: selenium
-    admin_password: zscripts1
+    admin_login: admin
+    admin_password: admin
     load_executor: locust            # jmeter and locust are supported. jmeter by default.
     concurrency: 2                # number of concurrent virtual users for jmeter or locust scenario
     test_duration: 5m
