--- a/app/jira.yml
+++ b/app/jira.yml
@@ -12,11 +12,11 @@ settings:
     application_postfix:            # e.g. /jira in case of url like http://localhost:2990/jira
     admin_login: admin
     admin_password: admin
-    load_executor: locust            # jmeter and locust are supported. jmeter by default.
-    concurrency: 2                # number of concurrent virtual users for jmeter or locust scenario
-    test_duration: 5m
-    ramp-up: 3s                     # time to spin all concurrent users
-    total_actions_per_hour: 5450   # number of total JMeter/Locust actions per hour
+    load_executor: jmeter            # jmeter and locust are supported. jmeter by default.
+    concurrency: 200                # number of concurrent virtual users for jmeter or locust scenario
+    test_duration: 45m
+    ramp-up: 3m                     # time to spin all concurrent users
+    total_actions_per_hour: 54500   # number of total JMeter/Locust actions per hour
     WEBDRIVER_VISIBLE: False
     JMETER_VERSION: 5.4.2
     LANGUAGE: en_US.utf8
@@ -34,7 +34,7 @@ settings:
     view_kanban_board: 7
     view_backlog: 6
     browse_boards: 1
-    standalone_extension: 2 # By default disabled
+    standalone_extension: 0 # By default disabled
     # Custom dataset section.
     custom_dataset_query: "summary ~ 'zcissue*'"        # Write JQL query to add JQL output to the app/datasets/jira/custom-issues.csv, e.g. "summary ~ 'AppIssue*'"
 services:
