modify jmeter test

--- a/app/jira.yml
+++ b/app/jira.yml
@@ -24,7 +24,7 @@ settings:
     # Action percentage for Jmeter and Locust load executors
     create_issue: 4
     search_jql: 11
-    view_issue: 34
+    view_issue: 26 #default was 34, but we reduced in 8 because 8 percent goes to view custom app issues
     view_project_summary: 3
     view_dashboard: 10
     edit_issue: 5
@@ -34,9 +34,9 @@ settings:
     view_kanban_board: 7
     view_backlog: 6
     browse_boards: 1
-    standalone_extension: 0 # By default disabled
+    standalone_extension: 8 # By default disabled
     # Custom dataset section.
-    custom_dataset_query: "summary ~ 'zcissue*'"        # Write JQL query to add JQL output to the app/datasets/jira/custom-issues.csv, e.g. "summary ~ 'AppIssue*'"
+    custom_dataset_query: "Issue in SalesforceIssues()"        # Write JQL query to add JQL output to the app/datasets/jira/custom-issues.csv, e.g. "summary ~ 'AppIssue*'"
 services:
   - module: shellexec
     prepare:
@@ -118,7 +118,7 @@ modules:
       httpsampler.ignore_failed_embedded_resources: "true"
   selenium:
     chromedriver:
-      version: "103.0.5060.134" # Supports Chrome version 103. You can refer to http://chromedriver.chromium.org/downloads
+      version: "99.0.4844.51" # Supports Chrome version 103. You can refer to http://chromedriver.chromium.org/downloads
 reporting:
 - data-source: sample-labels
   module: junit-xml
