--- a/app/jira.yml
+++ b/app/jira.yml
@@ -6,13 +6,13 @@ settings:
   check-updates: false    # disable bzt check for updates
   env:
     application_hostname: test_jira_instance.atlassian.com    # Jira DC hostname without protocol and port e.g. test-jira.atlassian.com or localhost
-    application_protocol: http      # http or https
-    application_port: 80            # 80, 443, 8080, 2990, etc
+    application_protocol: https      # http or https
+    application_port: 443            # 80, 443, 8080, 2990, etc
     secure: True                    # Set False to allow insecure connections, e.g. when using self-signed SSL certificate
     application_postfix:            # e.g. /jira in case of url like http://localhost:2990/jira
     admin_login: admin
     admin_password: admin
-    load_executor: jmeter           # jmeter and locust are supported. jmeter by default.
+    load_executor: jmeter            # jmeter and locust are supported. jmeter by default.
     concurrency: 200                # number of concurrent virtual users for jmeter or locust scenario
     test_duration: 45m
     ramp-up: 3m                     # time to spin all concurrent users
@@ -24,7 +24,7 @@ settings:
     # Action percentage for Jmeter and Locust load executors
     create_issue: 4
     search_jql: 11
-    view_issue: 34
+    view_issue: 26 #default was 34, but we reduced in 8 because 8 percent goes to view custom app issues
     view_project_summary: 3
     view_dashboard: 10
     edit_issue: 5
@@ -34,9 +34,9 @@ settings:
     view_kanban_board: 7
     view_backlog: 6
     browse_boards: 1
-    standalone_extension: 0 # By default disabled
+    standalone_extension: 8 # By default disabled
     # Custom dataset section.
-    custom_dataset_query:          # Write JQL query to add JQL output to the app/datasets/jira/custom-issues.csv, e.g. "summary ~ 'AppIssue*'"
+    custom_dataset_query: "Issue in SalesforceIssues()"        # Write JQL query to add JQL output to the app/datasets/jira/custom-issues.csv, e.g. "summary ~ 'AppIssue*'"
 services:
   - module: shellexec
     prepare:
