--- a/app/jira.yml
+++ b/app/jira.yml
@@ -25,7 +25,7 @@ settings:
     # Action percentage for Jmeter and Locust load executors
     create_issue: 4
     search_jql: 11
-    view_issue: 34
+    view_issue: 26 #default was 34, but we reduced in 8 because 8 percent goes to view custom app issues
     view_project_summary: 3
     view_dashboard: 10
     edit_issue: 5
@@ -35,9 +35,9 @@ settings:
     view_kanban_board: 7
     view_backlog: 6
     browse_boards: 1
-    standalone_extension: 0 # By default disabled
+    standalone_extension: 8 # By default disabled
     # Custom dataset section.
-    custom_dataset_query:          # Write JQL query to add JQL output to the app/datasets/jira/custom-issues.csv, e.g. "summary ~ 'AppIssue*'"
+    custom_dataset_query: "Issue in SalesforceIssues()"         # Write JQL query to add JQL output to the app/datasets/jira/custom-issues.csv, e.g. "summary ~ 'AppIssue*'"
 services:
   - module: shellexec
     prepare:
